cmake_minimum_required(VERSION 3.10)
project(C___DataStructures_Algorithms)

set(CMAKE_CXX_STANDARD 11)

add_executable(C___DataStructures_Algorithms main.cpp Chapter_1/1.cpp Chapter_1/2.cpp Chapter_1/3.cpp Chapter_1/4.cpp Chapter_1/5.cpp Chapter_1/6.cpp Chapter_1/7.cpp Chapter2/1.cpp Chapter2/2.cpp Chapter2/3.cpp Chapter2/4.cpp Chapter2/5.cpp Chapter2/LIST_ADT/List.h Chapter2/LIST_ADT/ListR.cpp Chapter2/Node.cpp)